# shortcomings-cli

./: .shortcomings.yaml  AGENTS.md  CHANGELOG.md  Makefile  main.py  pyproject.toml
aspects/Aspect_Management/: aspect.yaml
aspects/Aspect_Management/features/: Define_Aspects.yaml  Graceful_Missing_Dir.yaml  List_Aspects_Command.yaml  Name_Validation.yaml  Robust Aspect Directory And YAML Handling.yaml  Robust_Aspect_Directory_And_YAML_Handling.yaml
aspects/Aspect_Management/shortcomings/: List Aspects Crashes On Missing Dir.yaml  List Aspects Fragile YAML Handling.yaml  List_Aspects_Fragile_YAML_Handling.yaml  No_List_Aspects_Command.yaml  No_Name_Validation.yaml
aspects/Data_Extraction_Interoperability/: aspect.yaml
aspects/Data_Extraction_Interoperability/features/: List_All.yaml
aspects/Data_Extraction_Interoperability/shortcomings/: Limited_Output_Formats.yaml  No_Filtering_Support.yaml
aspects/Environment_Integration_Config/: aspect.yaml
aspects/Environment_Integration_Config/features/: Config_Discovery.yaml  No_Editor_Integration.yaml  Robust_YAML_Loading.yaml  Safe_Init_Command.yaml  Typer_CLI.yaml  auto-help.yaml  version-flag.yaml
aspects/Environment_Integration_Config/shortcomings/: No_Init_Command.yaml  (+3 more)
aspects/Lifecycle_Tracking/: aspect.yaml
src/shortcomings/: __init__.py  cli.py  engine.py  main.py
tests/: test_add_aspect.py  test_add_feature.py  test_add_shortcoming.py  test_cli_feedback.py  test_config_discovery.py  test_criticality_validation.py  test_dummy.py  test_engine.py  test_list_all.py  test_list_all_robust.py  test_main.py
(+9 files in other folders)
